# fastapi-auth-starter

./: README.md  pyproject.toml
app/: alembic.ini  main.py
app/alembic/: env.py
app/alembic/versions/: 2b46d1508bf6_create_user_model.py
app/db/: setup.py
app/db/models/: user.py
app/routes/: auth.py  protected.py
app/schema/: auth.py
app/services/: auth.py
